fixed header alignment

--- a/sass/blocks/_form.scss
+++ b/sass/blocks/_form.scss
@@ -78,6 +78,7 @@
   margin: 0;
 
   text-transform: uppercase;
+  text-align: center;
 }
 
 .form__legend--hidden {
